--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^9.8.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-h5-audio-player": "^3.8.4",
     "react-icons": "^4.4.0",
     "react-responsive": "^9.0.0-beta.10",
     "react-router-dom": "^6.3.0",
